--- a/org.evilbunny.weewxapp4gtk.json
+++ b/org.evilbunny.weewxapp4gtk.json
@@ -22,6 +22,10 @@
                 "install -D yahoo.py /app/bin/yahoo.py",
                 "cp -a assets /app/bin/"
             ],
+            "finish-args": [
+                "--share=network",
+                "--socket=wayland"
+            ],
             "sources": [
                 {
                     "type": "file",
